--- a/microservice-consumer-movie-ribbon-without-eureka/src/main/resources/application.yml
+++ b/microservice-consumer-movie-ribbon-without-eureka/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   
 spring:
   application:
-    name: microservice.consumer.movie.ribbon
+    name: microservice-consumer-movie-ribbon-without-eureka
     
 eureka:
   client:
